diagram overflow fix

--- a/src/views/pages/Canvas/StoryBoard.css
+++ b/src/views/pages/Canvas/StoryBoard.css
@@ -1475,9 +1475,11 @@ box-shadow: 0 4px 10px 0 rgba(0, 0, 0, .07) !important;
 }
 
 #diagram {
-    width: 100%;
-    height: 100%;
-    padding-left: 40px;
+  width: 100%;
+  height: 100%;
+  padding-left: 40px;
+  overflow: hidden;
+  position: relative;
 }
 
 #diagram.no-padding {
